--- a/src/app/pages/rcm-login/cases/cases.component.scss
+++ b/src/app/pages/rcm-login/cases/cases.component.scss
@@ -297,3 +297,17 @@ mat-card {
         /* Full width for very small screens */
     }
 }
+
+
+
+
+.dropdown-content {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    margin-top: -2px;
+    padding: 10px;
+    width: 31%;
+    position: absolute;
+    z-index: 10;
+  }
