--- a/src/app/pages/rcm-login/radar/new-matrics/new-matrics.component.scss
+++ b/src/app/pages/rcm-login/radar/new-matrics/new-matrics.component.scss
@@ -189,3 +189,18 @@ mat-card {
     border-color: #FFC300;
     color: #FFC300;
 }
+
+
+
+
+
+.dropdown-content {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    margin-top: -2px;
+    padding: 10px;
+    width: 31%;
+    position: absolute;
+    z-index: 10;
+  }
