--- a/src/app/pages/rcm-login/rcm-document/rcm-document.component.scss
+++ b/src/app/pages/rcm-login/rcm-document/rcm-document.component.scss
@@ -333,3 +333,15 @@
     right: 60px;
     background-color: #e6e6e6 !important;
 }
+
+
+.dropdown-content {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    margin-top: -2px;
+    padding: 10px;
+    width: 31%;
+    position: absolute;
+    z-index: 10;
+  }
