--- a/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
+++ b/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
@@ -74,7 +74,8 @@
                 <th>Role</th>
                 <th class="text-center">Users</th>
                 <th class="text-center">Special Permission</th>
-                <th class="text-center">Perspectives Permission</th>
+                <th class="text-center">Perspectives</th>
+                <th class="text-center">Horizon</th>
                 <th style="text-align: center !important;">Screen Permissions</th>
                 <th style="text-align: center !important;">Actions</th>
             </tr>
@@ -90,6 +91,10 @@
                 </td>
                 <td class="text-center" (click)="perspectives();" style="color: cornflowerblue; cursor: pointer;">
                     4/11
+                </td>
+                <td class="text-center">
+                    <a style="cursor: pointer; color: cornflowerblue;" (click)="onPermClick()">20/40
+                    </a>
                 </td>
                 <td class="text-center">
                     <a style="cursor: pointer; color: cornflowerblue;" (click)="onPermClick()">20/40
