--- a/src/app/pages/rcm-login/patients/patients.component.html
+++ b/src/app/pages/rcm-login/patients/patients.component.html
@@ -597,107 +597,197 @@
 </div>
 
 <!-- Filter UI -->
-<div fxLayout="row wrap" *ngIf="filterToggle" style="margin-bottom: 5px">
-  <div fxFlex="100" class="flex-p w-100">
-    <form>
-      <mat-card class="filter" style="width: 98%; margin-left: 15px;">
-        <mat-card-content>
-          <div class="row col-sm-10">
-            <div class="col-sm-4">
-              <div class="col-sm-4">
-                <label class="control-label mt-2">Keyword :</label>
-              </div>
-              <div class="col-sm-8">
-                <input type="text" class="form-control" placeholder="Serch by Keywords..">
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="col-sm-4">
-                <label class="control-label mt-2">Patient Name :</label>
-              </div>
-              <div class="col-sm-8">
-                <mat-select placeholder="Filter by Patient Name" class="form-control">
-                  <mat-option value="1">John Doe</mat-option>
-                  <mat-option value="1">Jane Smith</mat-option>
-                  <mat-option value="1">Mike Johnson</mat-option>
-                  <mat-option value="1">John Doe</mat-option>
-                  <mat-option value="1">Jane Smith</mat-option>
-                  <mat-option value="1">Mike Johnson</mat-option>
-                </mat-select>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="col-sm-4">
-                <label class="control-label mt-2">City :</label>
-              </div>
-              <div class="col-sm-8">
-                <mat-select placeholder="Filter by City" class="form-control">
-                  <mat-option value="1">New York</mat-option>
-                  <mat-option value="1">Los Angeles</mat-option>
-                  <mat-option value="1">Chicago</mat-option>
-                  <mat-option value="1">Houston</mat-option>
-                  <mat-option value="1">Phoenix</mat-option>
-                  <mat-option value="1">San Diego</mat-option>
-                  <mat-option value="1">Dallas</mat-option>
-                  <mat-option value="1">Austin</mat-option>
-                  <mat-option value="1">Miami</mat-option>
-                  <mat-option value="1">Seattle</mat-option>
-                </mat-select>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <div class="col-sm-4">
-                <label class="control-label mt-2">State :</label>
-              </div>
-              <div class="col-sm-8">
-                <mat-select placeholder="Filter by State" class="form-control">
-                  <mat-option value="1">New York</mat-option>
-                  <mat-option value="1">California</mat-option>
-                  <mat-option value="1">Illinois</mat-option>
-                  <mat-option value="1">Texas</mat-option>
-                  <mat-option value="1">Arizona</mat-option>
-                  <mat-option value="1">Florida</mat-option>
-                  <mat-option value="1">Washington</mat-option>
-                </mat-select>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <div class="col-sm-4">
-                <label class="control-label mt-2">Status :</label>
-              </div>
-              <div class="col-sm-8">
-                <mat-select placeholder="Filter by Status" class="form-control">
-                  <mat-option value="1">Active</mat-option>
-                  <mat-option value="1">Inactive</mat-option>
-                </mat-select>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
-                style="font-size: 20px; cursor: pointer; margin-left: 5px">
-                <i class="fa fa-angle-double-up" aria-hidden="true"></i>
-              </a>
 
-              <i class="material-icons pull-right" matTooltip="Clear"
-                style="font-size: 25px; cursor: pointer; margin-left: 5px;">
-                settings_backup_restore
-              </i>
+<div fxLayout="row wrap" *ngIf="filterToggle" style="margin-left: 10px;"
+    style="margin-bottom: 10px;flex-flow: wrap;box-sizing: border-box;display: flex;margin-left: 10px;">
+    <div fxFlex="100" class="flex-p w-100">
+      <form >
+        <!-- [formGroup]="filterForm" -->
+        <mat-card class="filter">
+          <mat-card-content>
+            <div class="row pl-4">
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Keyword:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <input type="text" placeholder="Search by Keyword" class="form-control" > 
+                    <!-- formControlName="keyword" -->
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>State:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select placeholder="--Select State--" [(value)]="selectedEventType" class="form-control" multiple >
+                      
+                      <mat-select-trigger>
+                        {{selectedEventType || '--Select State--'}}
+                      </mat-select-trigger>
+                      <mat-form-field *ngIf="eventTypes.length > 1" appearance="fill" style="width: 100%;">
+                        <input matInput (input)="applyFilter($event)" placeholder="Search">
+                      </mat-form-field>
+                      <mat-option *ngFor="let event of filteredEventTypes" [value]="event">
+                        {{event}}
+                      </mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+             
+              
 
-              <i class="fa fa-save pull-right" matTooltip="Save" (click)="saveFilters();"
-                style="font-size: 20px; cursor: pointer; margin-left: 5px; color: green;" aria-hidden="true">
-              </i>
 
-              <i class="fa fa-search pull-right" matTooltip="Search"
-                style="font-size: 20px; cursor: pointer; margin-left: 5px; color: blue;" aria-hidden="true">
-              </i>
 
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>City:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select placeholder="--Select City--" [(value)]="selectCityType" class="form-control" multiple >
+                      <!-- formControlName="city" -->
+                      <mat-select-trigger>
+                        {{selectCityType || '--Select City--'}}
+                      </mat-select-trigger>
+                      <mat-form-field *ngIf="eventTypes.length > 1" appearance="fill" style="width: 100%;">
+                        <input matInput (input)="applyFilter1($event)" placeholder="Search">
+                      </mat-form-field>
+                      <mat-option *ngFor="let event of filteredCityTypes" [value]="event">
+                        {{event}}
+                      </mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-        </mat-card-content>
-      </mat-card>
-    </form>
-  </div>
+      
+            <div class="row pt-4  pl-4">
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Gender:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(ngModel)]="selectedGender" placeholder="--Select Gender--" class="form-control">
+                      <mat-option [value]="'Male'">Male</mat-option>
+                      <mat-option [value]="'Female'">Female</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Marital Status:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedMaritalStatus" placeholder="--Select Marital Status--" class="form-control">
+                      <mat-option [value]="'Married'">Married</mat-option>
+                      <mat-option [value]="'Unmarried'">Unmarried</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+              
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Case Type:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedCaseType" placeholder="--Select Case Type--" class="form-control">
+                      <mat-option [value]="'Sub Acute'">Sub Acute</mat-option>
+                      <mat-option [value]="'Insurance'">Insurance</mat-option>
+                      <mat-option [value]="'Worker Comp'">Worker Comp</mat-option>
+                      <mat-option [value]="'Self Pay'">Self Pay</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+      
+            <div class="row pt-4  pl-4">
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Language:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select class="form-control" placeholder="Select Language" >
+                      <!-- formControlName="language" -->
+                      <mat-option [value]="'English'">English</mat-option>
+                      <mat-option [value]="'Spanish'">Spanish</mat-option>
+                      <mat-option [value]="'French'">French</mat-option>
+                      <mat-option [value]="'German'">German</mat-option>
+                      <mat-option [value]="'Chinese'">Chinese</mat-option>
+                      <mat-option [value]="'Hindi'">Hindi</mat-option>
+                      <mat-option [value]="'Arabic'">Arabic</mat-option>
+                      <mat-option [value]="'Russian'">Russian</mat-option>
+                      <mat-option [value]="'Portuguese'">Portuguese</mat-option>
+                      <mat-option [value]="'Japanese'">Japanese</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Ethnicity:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <input type="text" placeholder="Select Ethnicity" class="form-control" >
+                    <!-- formControlName="ethnicity" -->
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-9 offset-sm-3">
+                    <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
+                      style="font-size: 20px; cursor: pointer; margin-left: 5px">
+                      <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                    </a>
+      
+                    <i class="material-icons pull-right" matTooltip="Clear" (click)="clearFilters()"
+                      style="font-size: 25px; cursor: pointer; margin-left: 5px;">
+                      settings_backup_restore
+                    </i>
+      
+                    <i class="fa fa-save pull-right" matTooltip="Save" (click)="saveFilters();"
+                      style="font-size: 20px; cursor: pointer; margin-left: 5px; color: green;" aria-hidden="true">
+                    </i>
+      
+                    <i class="fa fa-search pull-right" matTooltip="Search" (click)="searchFilters();"
+                      style="font-size: 20px; cursor: pointer; margin-left: 5px; color: blue;" aria-hidden="true">
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </form>
+      
+        
+    
+    
+      </div>
 </div>
+
+
+
 
 <!-- Table -->
 <div class="col-sm-12 mt-3">
