--- a/src/app/pages/rcm-login/rcm-funds/invoices/invoices.component.html
+++ b/src/app/pages/rcm-login/rcm-funds/invoices/invoices.component.html
@@ -266,71 +266,334 @@
 <!-- Filter UI -->
 <div fxLayout="row wrap" *ngIf="filterToggle" style="margin-bottom: 10px" class="col-sm-12">
     <div fxFlex="100" class="flex-p w-100">
-        <form>
-            <mat-card class="filter">
-                <mat-card-content>
-                    <div class="row col-sm-12">
-                        <div class="col-sm-4 row">
-                            <div class="col-sm-4 mt-2">
-                                <b class="mt-2">Claims ID:</b>
-                            </div>
-                            <div class="col-sm-7">
-                                <mat-select class="form-control bac" placeholder="Select Claims ID">
-                                    <mat-option value="10025423">10025423</mat-option>
-                                    <mat-option value="10025424">10025424</mat-option>
-                                    <mat-option value="10025425">10025425</mat-option>
-                                    <mat-option value="10025426">10025426</mat-option>
-                                    <mat-option value="10025427">10025427</mat-option>
-                                    <mat-option value="10025428">10025428</mat-option>
-                                    <mat-option value="10025429">10025429</mat-option>
-                                    <mat-option value="10025430">10025430</mat-option>
-                                </mat-select>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 row">
-                            <div class="col-sm-4 mt-2">
-                                <b>Patient Name:</b>
-                            </div>
-                            <div class="col-sm-8">
-                                <mat-select class="form-control bac" placeholder="Select Patient Name">
-                                    <mat-option value="John Doe">John Doe</mat-option>
-                                    <mat-option value="Jane Smith">Jane Smith</mat-option>
-                                    <mat-option value="Alice Johnson">Alice Johnson</mat-option>
-                                    <mat-option value="Bob Brown">Bob Brown</mat-option>
-                                </mat-select>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 row">
-                            <div class="col-sm-4 mt-2">
-                                <b>Claim Status:</b>
-                            </div>
-                            <div class="col-sm-8">
-                                <mat-select placeholder="Select Claim Status" class="form-control">
-                                    <mat-option [value]="'Scheduled'">Scheduled</mat-option>
-                                    <mat-option [value]="'Completed'">Completed</mat-option>
-                                    <mat-option [value]="'Pending'">Pending</mat-option>
-                                    <mat-option [value]="'No Show'">No Show</mat-option>
-                                </mat-select>
-                            </div>
-                        </div>
-
-                        <!-- Search and Clear Buttons -->
-                        <div class="col-sm-12 mt-3">
-                            <button mat-raised-button class="pull-right" style="background-color: black; color: white;"
-                                (click)="filterForm.reset()">
-                                Clear
-                            </button>
-                            <button mat-raised-button style="background-color: blue; color: white;"
-                                class="pull-right margin-right-10">
-                                Search
-                            </button>
-                        </div>
+      <form>
+        <!-- [formGroup]="filterForm" -->
+        <mat-card class="filter">
+          <mat-card-content>
+            <div class="row pl-4">
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Keyword:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <input type="text" placeholder="Search by Keyword" class="form-control">
+                    <!-- formControlName="keyword" -->
+                  </div>
+                </div>
+              </div>
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Patient :</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select placeholder="--Select Patient --" [(value)]="selectedPatientType" class="form-control"
+                      multiple>
+      
+                      <mat-select-trigger>
+                        {{selectedPatientType || '--Select Patient--'}}
+                      </mat-select-trigger>
+                      <mat-form-field *ngIf="eventTypes.length > 1" appearance="fill" style="width: 100%;">
+                        <input matInput (input)="applyFilter($event)" placeholder="Search">
+                      </mat-form-field>
+                      <mat-option *ngFor="let event of filteredPatientTypes" [value]="event">
+                        {{event}}
+                      </mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+      
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Law Firm:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select placeholder="--Select Law Firm--" [(value)]="selectLawFirmType" class="form-control" multiple>
+      
+                      <mat-select-trigger>
+                        {{selectLawFirmType || '--Select City--'}}
+                      </mat-select-trigger>
+                      <mat-form-field *ngIf="eventLawFirmTypes.length > 1" appearance="fill" style="width: 100%;">
+                        <input matInput (input)="applyFilter1($event)" placeholder="Search">
+                      </mat-form-field>
+                      <mat-option *ngFor="let event of filteredLawFirmType" [value]="event">
+                        {{event}}
+                      </mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+      
+      
+      
+            </div>
+      
+      
+            <div class="row pt-4 pl-4">
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Case Type:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedCaseType" placeholder="--Select Case Type--" class="form-control">
+                      <mat-option [value]="'Sub Acute'">Sub Acute</mat-option>
+                      <mat-option [value]="'Insurance'">Insurance</mat-option>
+                      <mat-option [value]="'Worker Comp'">Worker Comp</mat-option>
+                      <mat-option [value]="'Self Pay'">Self Pay</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Category:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedCategoryType" placeholder="--Select Category--" class="form-control">
+                      <mat-option [value]="'Personal Injury'">Personal Injury</mat-option>
+                      <mat-option [value]="'Family Law'">Family Law</mat-option>
+                      <mat-option [value]="'Criminal Defense'">Criminal Defense</mat-option>
+                      <mat-option [value]="'Contract Disputes'">Contract Disputes</mat-option>
+                      <mat-option [value]="'Property Disputes'">Property Disputes</mat-option>
+                      <mat-option [value]="'Intellectual Property'">Intellectual Property</mat-option>
+                      <mat-option [value]="'Employment Law'">Employment Law</mat-option>
+                      <mat-option [value]="'Immigration Cases'">Immigration Cases</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Order Type:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedOrderType" placeholder="--Select Order Type--" class="form-control">
+                      <mat-option [value]="'Personal Injury'">Clinical</mat-option>
+                      <mat-option [value]="'Family Law'">Legal</mat-option>
+                      <mat-option [value]="'Criminal Defense'">Insurance</mat-option>
+                      <mat-option [value]="'Contract Disputes'">Clinical</mat-option>
+                      <mat-option [value]="'Property Disputes'">Medical</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+            </div>
+      
+      
+            <div class="row pt-4 pl-4">
+      
+      
+              <!-- raj -->
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Date Type:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedDateType" placeholder="--Select Date Type--" class="form-control">
+                      <mat-option [value]="'Date Created'">Date Created</mat-option>
+                      <mat-option [value]="'Injury Date'"> Injury Date</mat-option>
+                      <mat-option [value]="'Visit Date'"> Visit Date</mat-option>
+                      <mat-option [value]="'Visit Date'">Invoice Date</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>From Date:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <input type="date" class="form-control" maxlength="100" minlength="2" onDrag="return false"
+                      onDrop="return false" required>
+                  </div>
+                </div>
+              </div>
+      
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>To Date:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <input type="date" class="form-control" maxlength="100" minlength="2" onDrag="return false"
+                      onDrop="return false" required>
+                  </div>
+                </div>
+              </div>
+      
+      
+      
+            </div>
+      
+            <div class="row pt-4 pl-4">
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Referral From:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select placeholder="--Select Referral From: --" [(value)]="selectedRefferalFrom" class="form-control"
+                      multiple>
+      
+                      <mat-select-trigger>
+                        {{selectedRefferalFrom || '--Select Patient--'}}
+                      </mat-select-trigger>
+                      <mat-form-field *ngIf="eventRefferalFrom.length > 1" appearance="fill" style="width: 100%;">
+                        <input matInput (input)="applyFilter3($event)" placeholder="Search">
+                      </mat-form-field>
+                      <mat-option *ngFor="let event of filteredRefferalFrom" [value]="event">
+                        {{event}}
+                      </mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Referral To:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select placeholder="--Select Referral To: --" [(value)]="selectedRefferalTo" class="form-control"
+                      multiple>
+      
+                      <mat-select-trigger>
+                        {{selectedRefferalTo || '--Select Referral To--'}}
+                      </mat-select-trigger>
+                      <mat-form-field *ngIf="eventRefferalTo.length > 1" appearance="fill" style="width: 100%;">
+                        <input matInput (input)="applyFilter4($event)" placeholder="Search">
+                      </mat-form-field>
+                      <mat-option *ngFor="let event of filteredRefferalTo" [value]="event">
+                        {{event}}
+                      </mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Claim Status:</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedVisitStatus" placeholder="--Select Visit Status --" class="form-control">
+                      
+                      <mat-option [value]="'Draft'">Draft</mat-option>
+                      <mat-option [value]="'Submitted'">Submitted</mat-option>
+                      <mat-option [value]="'Deposit'">Deposit</mat-option>
+                      <mat-option [value]="'Settled'">Settled</mat-option>
+                      <mat-option [value]="'Paid'">Paid</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+            </div>
+      
+      
+      
+      
+            <div class="row pt-4 pl-4">
+      
+              <div class="col-sm-4">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <b>Location:</b>
                     </div>
-                </mat-card-content>
-            </mat-card>
-        </form>
+                    <div class="col-sm-7">
+                        <mat-select [(value)]="selectedLocation" placeholder="--Select Location --"
+                            class="form-control">
+                            <mat-option [value]="'Florida'">Florida</mat-option>
+                            <mat-option [value]="'Arizona'">Arizona</mat-option>
+                            <mat-option [value]="'Georgia'">Georgia</mat-option>
+                            <mat-option [value]="'Texas'">Texas</mat-option>
+                            <mat-option [value]="'Delaware'">Delaware</mat-option>
+                        </mat-select>
+                    </div>
+                </div>
+            </div>
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <b>Visit Type :</b>
+                  </div>
+                  <div class="col-sm-7">
+                    <mat-select [(value)]="selectedVisitType" placeholder="--Select Visit Type  --" class="form-control">
+                      <mat-option [value]="'Clinical'">Clinical</mat-option>
+                      <mat-option [value]="'Imaging'">Imaging</mat-option>
+                    </mat-select>
+                  </div>
+                </div>
+              </div>
+      
+      
+      
+              <div class="col-sm-4">
+                <div class="row">
+                  <div class="col-sm-9 offset-sm-3">
+                    <a (click)="filterToggle = !filterToggle" matTooltip="Close" class="pull-right"
+                      style="font-size: 20px; cursor: pointer; margin-left: 5px">
+                      <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+                    </a>
+      
+                    <i class="material-icons pull-right" matTooltip="Clear"
+                      style="font-size: 25px; cursor: pointer; margin-left: 5px">
+                      settings_backup_restore
+                    </i>
+      
+                    <i class="fa fa-save pull-right" matTooltip="Save" (click)="saveFilters()" style="
+                                      font-size: 20px;
+                                      cursor: pointer;
+                                      margin-left: 5px;
+                                      color: green;
+                                    " aria-hidden="true">
+                    </i>
+      
+                    <i class="fa fa-search pull-right" matTooltip="Search" style="
+                                      font-size: 20px;
+                                      cursor: pointer;
+                                      margin-left: 5px;
+                                      color: blue;
+                                    " aria-hidden="true">
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </mat-card-content>
+        </mat-card>
+      </form>
     </div>
 </div>
 
